<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:background="@drawable/main_bg"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="@string/main_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:lineHeight="45dp"
                android:textSize="35sp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F3F3F3"
            android:orientation="vertical">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp">
                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="98dp"
                        android:layout_height="98dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/image1" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/world_news"
                            android:textSize="30sp"
                            android:textColor="@color/black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/text_description"
                                android:textSize="20sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="98dp"
                        android:layout_height="98dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/image2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/world_news"
                            android:textSize="30sp"
                            android:textColor="@color/black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/text_description_2"
                                android:textSize="20sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="98dp"
                        android:layout_height="98dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/image3" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/local_news"
                            android:textSize="30sp"
                            android:textColor="@color/black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/text_description_3"
                                android:textSize="20sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="98dp"
                        android:layout_height="98dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/image4" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/local_news"
                            android:textSize="30sp"
                            android:textColor="@color/black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/text_description_4"
                                android:textSize="20sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="98dp"
                        android:layout_height="98dp"
                        android:layout_margin="5dp"
                        app:srcCompat="@drawable/image2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/world_news"
                            android:textSize="30sp"
                            android:textColor="@color/black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:text="@string/text_description_3"
                                android:textSize="20sp"
                                android:textColor="@color/black"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
